--- a/nicepage.css
+++ b/nicepage.css
@@ -44033,7 +44033,7 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 93px;
+  min-height: 92px;
 }
 
 .u-header .u-image-1 {
@@ -44048,7 +44048,7 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-menu-1 {
-  margin: -92px 170px 0 auto;
+  margin: -91px 170px 0 auto;
 }
 
 .u-header .u-nav-1 {
@@ -44067,26 +44067,35 @@ a.u-link.u-text-hover-grey-90:hover {
   font-weight: 600;
   letter-spacing: 1px;
   transition-duration: 0.3s;
-  margin: -41px 0 22px auto;
+  margin: -42px 0 24px auto;
   padding: 7px 22px;
 }
 @media (max-width: 1199px) {
-  .u-header .u-image-1 {
-    width: 143px;
-    height: 143px;
+  .u-header .u-sheet-1 {
+    min-height: 203px;
   }
 
   .u-header .u-menu-1 {
-    margin-top: -91px;
+    width: auto;
+    margin-top: -79px;
     margin-right: 170px;
   }
 
   .u-header .u-btn-1 {
-    margin-top: -41px;
+    margin-right: 0;
+    margin-bottom: 60px;
   }
 }
-
-
+@media (max-width: 991px) {
+  .u-header .u-menu-1 {
+    margin-top: 20px;
+  }
+}
+@media (max-width: 767px) {
+  .u-header .u-menu-1 {
+    margin-top: -91px;
+  }
+}
 @media (max-width: 575px) {
   .u-header .u-menu-1 {
     margin-right: 107px;
@@ -44103,7 +44112,7 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-footer .u-sheet-1 {
-  min-height: 280px;
+  min-height: 283px;
 }
 
 .u-footer .u-image-1 {
@@ -44120,8 +44129,8 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-footer .u-social-icons-1 {
   height: 32px;
   min-height: 16px;
-  width: 116px;
-  min-width: 68px;
+  width: 78px;
+  min-width: 46px;
   margin: -21px auto 0 141px;
 }
 
@@ -44130,10 +44139,6 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-footer .u-icon-2 {
-  height: 100%;
-}
-
-.u-footer .u-icon-3 {
   height: 100%;
 }
 
@@ -44147,6 +44152,11 @@ a.u-link.u-text-hover-grey-90:hover {
   margin: -29px auto 0 690px;
 }
 
+.u-footer .u-btn-1 {
+  background-image: none;
+  padding: 0;
+}
+
 .u-footer .u-text-3 {
   font-weight: 700;
   margin: -29px auto 0 959px;
@@ -44156,30 +44166,50 @@ a.u-link.u-text-hover-grey-90:hover {
   margin: 11px 245px 0 809px;
 }
 
-.u-footer .u-text-5 {
-  margin: -29px 380px 0 674px;
+.u-footer .u-btn-2 {
+  background-image: none;
+  padding: 0;
 }
 
-.u-footer .u-btn-1 {
+.u-footer .u-text-5 {
+  margin: -20px 245px 0 auto;
+}
+
+.u-footer .u-btn-3 {
   background-image: none;
   padding: 0;
 }
 
 .u-footer .u-text-6 {
-  margin: -28px auto 0 934px;
+  margin: -37px 379px 0 690px;
+}
+
+.u-footer .u-btn-4 {
+  background-image: none;
+  padding: 0;
 }
 
 .u-footer .u-text-7 {
-  margin: 7px 380px 0 674px;
+  margin: -29px 89px 0 auto;
+}
+
+.u-footer .u-btn-5 {
+  background-image: none;
+  padding: 0;
 }
 
 .u-footer .u-text-8 {
-  margin: -58px auto 0 809px;
+  margin: 0 384px 0 678px;
+}
+
+.u-footer .u-btn-6 {
+  background-image: none;
+  padding: 0;
 }
 
 .u-footer .u-line-1 {
   width: 912px;
-  margin: 62px auto 36px;
+  margin: 13px auto 60px;
 }
 @media (max-width: 1199px) {
   .u-footer .u-image-1 {
@@ -44194,8 +44224,8 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-footer .u-text-1 {
-    width: 85px;
-    margin-top: -113px;
+    width: 70px;
+    margin-top: 20px;
     margin-left: 667px;
   }
 
@@ -44211,34 +44241,32 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-footer .u-text-4 {
+    margin-top: 12px;
     margin-right: 145px;
     margin-left: 709px;
   }
 
   .u-footer .u-text-5 {
-    margin-top: -29px;
-    margin-right: 280px;
-    margin-left: 574px;
+    margin-top: 36px;
   }
 
   .u-footer .u-text-6 {
-    margin-top: -29px;
-    margin-left: 770px;
+    margin-top: -94px;
+    margin-right: 279px;
+    margin-left: 590px;
   }
 
   .u-footer .u-text-7 {
-    margin-top: 7px;
-    margin-right: 280px;
-    margin-left: 574px;
+    margin-top: -29px;
   }
 
   .u-footer .u-text-8 {
-    margin-top: -29px;
-    margin-left: 667px;
+    margin-right: 284px;
+    margin-left: 578px;
   }
 
   .u-footer .u-line-1 {
-    margin-bottom: 60px;
+    margin-top: 62px;
   }
 }
 @media (max-width: 991px) {
@@ -44247,6 +44275,7 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-footer .u-text-1 {
+    width: 85px;
     margin-left: 511px;
   }
 
@@ -44264,21 +44293,22 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-footer .u-text-5 {
-    margin-right: 170px;
-    margin-left: 464px;
+    margin-right: 188px;
   }
 
   .u-footer .u-text-6 {
-    margin-left: 590px;
+    margin-top: 20px;
+    margin-right: 169px;
+    margin-left: 480px;
   }
 
   .u-footer .u-text-7 {
-    margin-right: 170px;
-    margin-left: 464px;
+    margin-top: 20px;
   }
 
   .u-footer .u-text-8 {
-    margin-left: 511px;
+    margin-right: 174px;
+    margin-left: 468px;
   }
 
   .u-footer .u-line-1 {
@@ -44296,6 +44326,7 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-footer .u-text-1 {
+    margin-top: -113px;
     margin-left: 383px;
   }
 
@@ -44308,33 +44339,35 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-footer .u-text-4 {
+    margin-top: 11px;
     margin-right: 0;
     margin-left: 454px;
   }
 
   .u-footer .u-text-5 {
-    margin-right: 80px;
-    margin-left: 374px;
+    margin-top: 26px;
+    margin-right: 141px;
   }
 
   .u-footer .u-text-6 {
-    margin-top: -32px;
-    margin-left: 443px;
+    margin-top: -80px;
+    margin-right: 79px;
+    margin-left: 390px;
   }
 
   .u-footer .u-text-7 {
-    margin-top: 14px;
-    margin-right: 80px;
-    margin-left: 374px;
+    margin-top: -32px;
   }
 
   .u-footer .u-text-8 {
-    margin-top: -30px;
-    margin-left: 383px;
+    margin-top: 14px;
+    margin-right: 84px;
+    margin-left: 378px;
   }
 
   .u-footer .u-line-1 {
     width: 540px;
+    margin-top: 58px;
   }
 }
 @media (max-width: 575px) {
@@ -44363,21 +44396,17 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-footer .u-text-5 {
-    margin-right: 0;
-    margin-left: 254px;
+    margin-right: 89px;
   }
 
   .u-footer .u-text-6 {
-    margin-left: 279px;
-  }
-
-  .u-footer .u-text-7 {
     margin-right: 0;
-    margin-left: 254px;
+    margin-left: 269px;
   }
 
   .u-footer .u-text-8 {
-    margin-left: 241px;
+    margin-right: 0;
+    margin-left: 262px;
   }
 
   .u-footer .u-line-1 {
