--- a/nicepage.css
+++ b/nicepage.css
@@ -44059,9 +44059,20 @@ a.u-link.u-text-hover-grey-90:hover {
 
 .u-header .u-nav-2 {
   font-size: 1.25rem;
+  margin-bottom: 0;
 }
 
 .u-header .u-btn-1 {
+  font-size: 0.875rem;
+  border-style: solid;
+  font-weight: 600;
+  letter-spacing: 1px;
+  transition-duration: 0.3s;
+  margin: 21px auto 0;
+  padding: 7px 22px;
+}
+
+.u-header .u-btn-2 {
   font-size: 0.875rem;
   border-style: solid;
   font-weight: 600;
@@ -44081,28 +44092,55 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-right: 170px;
   }
 
-  .u-header .u-btn-1 {
+  .u-header .u-btn-2 {
     margin-top: -39px;
     margin-right: 0;
     margin-bottom: 60px;
   }
 }
 @media (max-width: 991px) {
+  .u-header .u-sheet-1 {
+    min-height: 85px;
+  }
+
+  .u-header .u-image-1 {
+    margin-top: -13px;
+  }
+
   .u-header .u-menu-1 {
-    margin-top: 20px;
+    margin-top: -69px;
+    margin-right: 0;
+  }
+
+  .u-header .u-btn-2 {
+    margin-top: -35px;
+    margin-right: 47px;
+    margin-bottom: 27px;
   }
 }
 @media (max-width: 767px) {
   .u-header .u-menu-1 {
     margin-top: -70px;
+    margin-right: 0;
+  }
+
+  .u-header .u-btn-1 {
+    margin-top: 31px;
+  }
+
+  .u-header .u-btn-2 {
+    margin-top: -35px;
+    margin-right: 0;
   }
 }
 @media (max-width: 575px) {
-  .u-header .u-menu-1 {
-    margin-right: 107px;
+  .u-header .u-btn-1 {
+    margin-top: 24px;
   }
 }
 .u-block-df51-23:not([data-block-selected]):not([data-cell-selected]), .u-block-df51-23:not([data-block-selected]):not([data-cell-selected]):before, .u-block-df51-23:not([data-block-selected]):not([data-cell-selected]) > .u-container-layout:before {
+    transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position
+} .u-header .u-btn-2, .u-header .u-btn-2:before, .u-header .u-btn-2 > .u-container-layout:before {
     transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position
 } .u-header .u-btn-1, .u-header .u-btn-1:before, .u-header .u-btn-1 > .u-container-layout:before {
     transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position
@@ -44272,87 +44310,184 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 }
 @media (max-width: 991px) {
+  .u-footer .u-sheet-1 {
+    min-height: 275px;
+  }
+
+  .u-footer .u-image-1 {
+    margin-top: 3px;
+    margin-left: 0;
+  }
+
   .u-footer .u-social-icons-1 {
-    margin-left: 724px;
+    margin-top: -39px;
+    margin-left: 49px;
   }
 
   .u-footer .u-text-1 {
-    width: 85px;
-    margin-left: 511px;
+    width: auto;
+    margin-top: -88px;
+    margin-right: 168px;
+    margin-left: auto;
   }
 
   .u-footer .u-text-2 {
-    margin-left: 436px;
+    width: auto;
+    margin-top: -28px;
+    margin-right: 306px;
+    margin-left: 360px;
   }
 
   .u-footer .u-text-3 {
-    margin-left: 606px;
+    width: auto;
+    margin-top: -29px;
+    margin-right: 76px;
+    margin-left: auto;
   }
 
   .u-footer .u-text-4 {
-    margin-right: 35px;
-    margin-left: 599px;
+    width: auto;
+    margin-top: 18px;
+    margin-right: 167px;
+    margin-left: 467px;
   }
 
   .u-footer .u-text-5 {
-    margin-top: 85px;
-    margin-right: 179px;
-    margin-left: 471px;
+    width: auto;
+    margin-top: -28px;
+    margin-right: 290px;
+    margin-left: 360px;
   }
 
   .u-footer .u-text-6 {
-    margin-top: 20px;
+    width: auto;
+    margin-top: -29px;
+    margin-right: 26px;
   }
 
   .u-footer .u-text-7 {
-    margin-top: -126px;
-    margin-right: 188px;
+    width: auto;
+    margin-top: 10px;
+    margin-right: 167px;
   }
 
   .u-footer .u-text-8 {
-    margin-top: 98px;
-    margin-right: 175px;
-    margin-left: 467px;
+    width: auto;
+    margin-top: -28px;
+    margin-right: 282px;
+    margin-left: 360px;
   }
 
   .u-footer .u-line-1 {
     width: 720px;
-    margin-top: 62px;
+    margin-top: 19px;
   }
 }
 @media (max-width: 767px) {
+  .u-footer .u-sheet-1 {
+    min-height: 246px;
+  }
+
   .u-footer .u-image-1 {
-    margin-top: -6px;
+    margin-top: 3px;
   }
 
   .u-footer .u-social-icons-1 {
-    margin-top: -67px;
-    margin-left: 634px;
+    margin-top: -17px;
+    margin-left: 33px;
+  }
+
+  .u-footer .u-text-1 {
+    margin-top: -109px;
+    margin-right: 162px;
+  }
+
+  .u-footer .u-text-2 {
+    margin-top: -25px;
+    margin-right: 300px;
+    margin-left: 192px;
+  }
+
+  .u-footer .u-text-3 {
+    margin-top: -27px;
+    margin-right: 61px;
+  }
+
+  .u-footer .u-text-4 {
+    margin-top: 52px;
+    margin-right: 162px;
+    margin-left: 302px;
+  }
+
+  .u-footer .u-text-5 {
+    margin-top: -65px;
+    margin-right: 286px;
+    margin-left: 192px;
+  }
+
+  .u-footer .u-text-6 {
+    margin-top: -26px;
+    margin-right: 17px;
+  }
+
+  .u-footer .u-text-7 {
+    margin-top: -25px;
+    margin-right: 163px;
+  }
+
+  .u-footer .u-text-8 {
+    margin-top: 13px;
+    margin-right: 270px;
+    margin-left: 192px;
+  }
+
+  .u-footer .u-line-1 {
+    margin-top: 27px;
+    margin-bottom: 39px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+}
+@media (max-width: 575px) {
+  .u-footer .u-sheet-1 {
+    min-height: 236px;
+  }
+
+  .u-footer .u-image-1 {
+    margin-top: 8px;
+    margin-left: auto;
+  }
+
+  .u-footer .u-social-icons-1 {
+    margin-top: 18px;
+    margin-left: auto;
   }
 
   .u-footer .u-text-1 {
     margin-top: -113px;
-    margin-left: 383px;
+    margin-right: 102px;
   }
 
   .u-footer .u-text-2 {
-    margin-left: 327px;
+    margin-top: -25px;
+    margin-right: 189px;
+    margin-left: 121px;
   }
 
   .u-footer .u-text-3 {
-    margin-left: 455px;
+    margin-top: -27px;
   }
 
   .u-footer .u-text-4 {
-    margin-top: 11px;
-    margin-right: 0;
-    margin-left: 454px;
+    margin-right: 62px;
+    margin-left: 202px;
   }
 
   .u-footer .u-text-5 {
-    margin-top: -29px;
-    margin-right: 89px;
-    margin-left: 381px;
+    margin-top: 20px;
+    margin-right: 186px;
+    margin-left: 92px;
   }
 
   .u-footer .u-text-6 {
@@ -44360,66 +44495,21 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-footer .u-text-7 {
-    margin-top: 35px;
-    margin-right: 141px;
+    margin-top: -25px;
+    margin-right: 103px;
   }
 
   .u-footer .u-text-8 {
-    margin-top: -47px;
-    margin-right: 85px;
-    margin-left: 377px;
+    margin-right: 170px;
+    margin-left: 92px;
   }
 
   .u-footer .u-line-1 {
-    width: 540px;
-    margin-top: 58px;
-  }
-}
-@media (max-width: 575px) {
-  .u-footer .u-image-1 {
-    margin-left: 72px;
-  }
-
-  .u-footer .u-social-icons-1 {
-    margin-left: 534px;
-  }
-
-  .u-footer .u-text-1 {
-    margin-left: 241px;
-  }
-
-  .u-footer .u-text-2 {
-    margin-left: 206px;
-  }
-
-  .u-footer .u-text-3 {
-    margin-left: 286px;
-  }
-
-  .u-footer .u-text-4 {
-    margin-left: 254px;
-  }
-
-  .u-footer .u-text-5 {
-    margin-right: 0;
-    margin-left: 270px;
-  }
-
-  .u-footer .u-text-6 {
-    margin-right: 0;
-  }
-
-  .u-footer .u-text-7 {
-    margin-right: 89px;
-  }
-
-  .u-footer .u-text-8 {
-    margin-right: 0;
-    margin-left: 262px;
-  }
-
-  .u-footer .u-line-1 {
-    width: 340px;
+    margin-top: 20px;
+    margin-bottom: 16px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 }
 
