--- a/Services.css
+++ b/Services.css
@@ -9,9 +9,9 @@
 .u-section-1 .u-text-1 {
   line-height: 1.2;
   letter-spacing: 1px;
-  font-size: 3.75rem;
   font-weight: 600;
   width: 753px;
+  font-size: 3rem;
   margin: 106px auto;
 }
 
@@ -61,7 +61,9 @@
 
 .u-section-2 .u-tabs-1 {
   min-height: 472px;
-  margin: 60px auto 60px 0;
+  width: 1074px;
+  height: auto;
+  margin: 60px auto;
 }
 
 .u-section-2 .u-tab-link-1 {
@@ -112,6 +114,7 @@
 
 .u-section-2 .u-text-1 {
   font-weight: 700;
+  font-size: 1.5rem;
   margin: -324px auto 0 0;
 }
 
@@ -131,17 +134,19 @@
 .u-section-2 .u-image-2 {
   width: 451px;
   height: 324px;
+  object-position: 0% 50%;
   margin: 0 0 0 auto;
 }
 
 .u-section-2 .u-text-3 {
   font-weight: 700;
-  margin: -324px auto 0 0;
+  font-size: 1.5rem;
+  margin: -324px 783px 0 0;
 }
 
 .u-section-2 .u-text-4 {
   font-size: 1.25rem;
-  margin: 20px 628px 0 0;
+  margin: 20px 577px 0 0;
 }
 
 .u-section-2 .u-tab-pane-3 {
@@ -160,6 +165,7 @@
 
 .u-section-2 .u-text-5 {
   font-weight: 700;
+  font-size: 1.5rem;
   margin: -324px auto 0 0;
 }
 
@@ -184,6 +190,7 @@
 
 .u-section-2 .u-text-7 {
   font-weight: 700;
+  font-size: 1.5rem;
   margin: -324px auto 0 0;
 }
 
@@ -194,74 +201,85 @@
 
 @media (max-width: 1199px) {
   .u-section-2 .u-tabs-1 {
-    height: auto;
-    margin-right: initial;
-    margin-left: initial;
+    width: 940px;
   }
 
   .u-section-2 .u-text-2 {
-    width: auto;
-    margin-right: 314px;
+    margin-right: 494px;
+  }
+
+  .u-section-2 .u-text-3 {
+    margin-right: 649px;
   }
 
   .u-section-2 .u-text-4 {
-    margin-right: 428px;
+    margin-right: 443px;
   }
 
   .u-section-2 .u-text-6 {
-    margin-right: 428px;
+    margin-right: 494px;
   }
 
   .u-section-2 .u-text-8 {
-    margin-right: 428px;
+    margin-right: 494px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-2 .u-image-1 {
-    width: 203px;
-    height: 244px;
-    margin-top: 94px;
-  }
-
-  .u-section-2 .u-text-1 {
-    margin-top: -338px;
+  .u-section-2 .u-tabs-1 {
+    width: 720px;
   }
 
   .u-section-2 .u-text-2 {
-    margin-right: 94px;
+    margin-right: 274px;
+  }
+
+  .u-section-2 .u-text-3 {
+    margin-right: 429px;
   }
 
   .u-section-2 .u-text-4 {
-    margin-right: 208px;
+    margin-right: 223px;
   }
 
   .u-section-2 .u-text-6 {
-    margin-right: 208px;
+    margin-right: 274px;
   }
 
   .u-section-2 .u-text-8 {
-    margin-right: 208px;
+    margin-right: 274px;
   }
 }
 
 @media (max-width: 767px) {
+  .u-section-2 .u-tabs-1 {
+    width: 540px;
+  }
+
+  .u-section-2 .u-tab-link-1 {
+    font-size: 1rem;
+  }
+
+  .u-section-2 .u-tab-link-2 {
+    font-size: 1rem;
+  }
+
+  .u-section-2 .u-tab-link-3 {
+    font-size: 1rem;
+  }
+
+  .u-section-2 .u-tab-link-4 {
+    font-size: 1rem;
+  }
+
   .u-section-2 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-image-1 {
-    margin-top: 113px;
-  }
-
-  .u-section-2 .u-text-1 {
-    margin-top: -357px;
-  }
-
   .u-section-2 .u-text-2 {
-    margin-right: 0;
     font-size: 1rem;
+    margin-right: 134px;
   }
 
   .u-section-2 .u-container-layout-2 {
@@ -269,9 +287,13 @@
     padding-right: 10px;
   }
 
+  .u-section-2 .u-text-3 {
+    margin-right: 289px;
+  }
+
   .u-section-2 .u-text-4 {
     font-size: 1rem;
-    margin-right: 68px;
+    margin-right: 83px;
   }
 
   .u-section-2 .u-container-layout-3 {
@@ -281,7 +303,7 @@
 
   .u-section-2 .u-text-6 {
     font-size: 1rem;
-    margin-right: 68px;
+    margin-right: 134px;
   }
 
   .u-section-2 .u-container-layout-4 {
@@ -291,7 +313,7 @@
 
   .u-section-2 .u-text-8 {
     font-size: 1rem;
-    margin-right: 68px;
+    margin-right: 134px;
   }
 }
 
@@ -301,21 +323,20 @@
   }
 
   .u-section-2 .u-tabs-1 {
-    min-height: 963px;
-    margin-right: initial;
-    margin-left: initial;
+    width: 340px;
   }
 
   .u-section-2 .u-image-1 {
-    width: 270px;
-    height: 310px;
-    margin-top: 394px;
-    margin-right: auto;
-    margin-left: 24px;
+    width: 320px;
+    height: 230px;
   }
 
   .u-section-2 .u-text-1 {
-    margin-top: -704px;
+    margin-top: -230px;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-right: 0;
   }
 
   .u-section-2 .u-image-2 {
@@ -325,6 +346,7 @@
 
   .u-section-2 .u-text-3 {
     margin-top: -230px;
+    margin-right: 89px;
   }
 
   .u-section-2 .u-text-4 {
@@ -357,16 +379,292 @@
     margin-right: 0;
   }
 }.u-section-3 .u-sheet-1 {
-  min-height: 400px;
+  min-height: 592px;
+}
+
+.u-section-3 .u-tabs-1 {
+  min-height: 472px;
+  width: 1074px;
+  height: auto;
+  margin: 60px auto;
+}
+
+.u-section-3 .u-tab-link-1 {
+  font-size: 1.25rem;
+  background-image: none;
+  font-weight: 700;
+  padding: 10px 25px;
+}
+
+.u-section-3 .u-tab-link-2 {
+  font-size: 1.25rem;
+  background-image: none;
+  font-weight: 700;
+  padding: 10px 25px;
+}
+
+.u-section-3 .u-tab-link-3 {
+  font-size: 1.25rem;
+  background-image: none;
+  font-weight: 700;
+  padding: 10px 25px;
+}
+
+.u-section-3 .u-tab-item-4 {
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-tab-link-4 {
+  font-size: 1.25rem;
+  background-image: none;
+  font-weight: 700;
+  padding: 10px 25px;
+}
+
+.u-section-3 .u-tab-pane-1 {
+  background-image: none;
+}
+
+.u-section-3 .u-container-layout-1 {
+  padding: 30px;
 }
 
 .u-section-3 .u-text-1 {
-  font-size: 3.75rem;
   font-weight: 700;
+  margin: -324px auto 0 0;
+}
+
+.u-section-3 .u-text-2 {
+  font-size: 1rem;
+  margin: 20px 628px 0 0;
+}
+
+.u-section-3 .u-tab-pane-2 {
+  background-image: none;
+}
+
+.u-section-3 .u-container-layout-2 {
+  padding: 30px;
+}
+
+.u-section-3 .u-text-3 {
+  font-weight: 700;
+  margin: -324px 837px 0 0;
+}
+
+.u-section-3 .u-text-4 {
+  font-size: 1rem;
+  margin: 20px 628px 0 0;
+}
+
+.u-section-3 .u-tab-pane-3 {
+  background-image: none;
+}
+
+.u-section-3 .u-container-layout-3 {
+  padding: 30px;
+}
+
+.u-section-3 .u-text-5 {
+  font-weight: 700;
+  margin: -324px auto 0 0;
+}
+
+.u-section-3 .u-text-6 {
+  font-size: 1rem;
+  margin: 20px 628px 0 0;
+}
+
+.u-section-3 .u-tab-pane-4 {
+  background-image: none;
+}
+
+.u-section-3 .u-container-layout-4 {
+  padding: 30px;
+}
+
+.u-section-3 .u-text-7 {
+  font-weight: 700;
+  margin: -324px auto 0 0;
+}
+
+.u-section-3 .u-text-8 {
+  font-size: 1rem;
+  margin: 20px 628px 0 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-3 .u-tabs-1 {
+    width: 940px;
+  }
+
+  .u-section-3 .u-text-2 {
+    margin-right: 494px;
+  }
+
+  .u-section-3 .u-text-3 {
+    margin-right: 703px;
+  }
+
+  .u-section-3 .u-text-4 {
+    margin-right: 494px;
+  }
+
+  .u-section-3 .u-text-6 {
+    margin-right: 494px;
+  }
+
+  .u-section-3 .u-text-8 {
+    margin-right: 494px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-3 .u-tabs-1 {
+    width: 720px;
+  }
+
+  .u-section-3 .u-tab-link-1 {
+    font-size: 1rem;
+  }
+
+  .u-section-3 .u-tab-link-2 {
+    font-size: 1rem;
+  }
+
+  .u-section-3 .u-tab-link-3 {
+    font-size: 1rem;
+  }
+
+  .u-section-3 .u-tab-link-4 {
+    font-size: 1rem;
+  }
+
+  .u-section-3 .u-text-1 {
+    margin-top: 0;
+  }
+
+  .u-section-3 .u-text-2 {
+    margin-right: 274px;
+  }
+
+  .u-section-3 .u-text-3 {
+    margin-top: 0;
+    margin-right: 483px;
+  }
+
+  .u-section-3 .u-text-4 {
+    margin-right: 274px;
+  }
+
+  .u-section-3 .u-text-5 {
+    margin-top: 0;
+  }
+
+  .u-section-3 .u-text-6 {
+    margin-right: 274px;
+  }
+
+  .u-section-3 .u-text-7 {
+    margin-top: 0;
+  }
+
+  .u-section-3 .u-text-8 {
+    margin-right: 274px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 552px;
+  }
+
+  .u-section-3 .u-tabs-1 {
+    width: 540px;
+    margin-bottom: 20px;
+  }
+
+  .u-section-3 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-text-2 {
+    margin-right: 134px;
+  }
+
+  .u-section-3 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-text-3 {
+    margin-right: 343px;
+  }
+
+  .u-section-3 .u-text-4 {
+    margin-right: 134px;
+  }
+
+  .u-section-3 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-text-6 {
+    margin-right: 134px;
+  }
+
+  .u-section-3 .u-container-layout-4 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-text-8 {
+    margin-right: 134px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 532px;
+  }
+
+  .u-section-3 .u-tabs-1 {
+    width: 340px;
+    margin-bottom: 0;
+  }
+
+  .u-section-3 .u-text-2 {
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-text-3 {
+    margin-right: 143px;
+  }
+
+  .u-section-3 .u-text-4 {
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-text-6 {
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-text-8 {
+    margin-right: 0;
+  }
+}.u-section-4 .u-sheet-1 {
+  min-height: 400px;
+}
+
+.u-section-4 .u-text-1 {
+  font-weight: 700;
+  font-size: 3rem;
   margin: 59px auto 0;
 }
 
-.u-section-3 .u-btn-1 {
+.u-section-4 .u-btn-1 {
   font-size: 1.875rem;
   border-style: solid;
   letter-spacing: 1px;
@@ -378,19 +676,19 @@
 }
 
 @media (max-width: 767px) {
-  .u-section-3 .u-text-1 {
+  .u-section-4 .u-text-1 {
     font-size: 2.25rem;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-3 .u-text-1 {
+  .u-section-4 .u-text-1 {
     font-size: 1.875rem;
   }
 }
 
-.u-section-3 .u-btn-1,
-.u-section-3 .u-btn-1:before,
-.u-section-3 .u-btn-1 > .u-container-layout:before {
+.u-section-4 .u-btn-1,
+.u-section-4 .u-btn-1:before,
+.u-section-4 .u-btn-1 > .u-container-layout:before {
   transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
 }
