--- a/index.css
+++ b/index.css
@@ -12,11 +12,12 @@
   line-height: 1.3;
   letter-spacing: 1px;
   width: 716px;
-  margin: 197px auto 0;
+  margin: 143px auto 0;
 }
 
 .u-section-1 .u-text-2 {
   font-weight: 700;
+  font-size: 1.125rem;
   margin: 22px auto 0;
 }
 
@@ -42,36 +43,77 @@
   .u-section-1 .u-text-1 {
     font-size: 1.25rem;
   }
-
-  .u-section-1 .u-text-2 {
-    font-size: 1.125rem;
-  }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 369px;
+    min-height: 494px;
+  }
+
+  .u-section-1 .u-text-1 {
+    font-size: 2.25rem;
+    margin-left: 2px;
+    margin-right: 2px;
+  }
+
+  .u-section-1 .u-text-2 {
+    width: auto;
+    margin-top: 52px;
+    margin-left: 38px;
+    margin-right: 38px;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-top: 46px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 277px;
+    min-height: 477px;
   }
 
   .u-section-1 .u-text-1 {
-    font-size: 1rem;
-    width: 600px;
+    font-size: 1.875rem;
+    width: auto;
+    margin-top: 142px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-text-2 {
     font-size: 1rem;
+    margin-top: 34px;
+    margin-right: auto;
+    margin-left: -4px;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-top: 45px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 174px;
+    min-height: 456px;
+  }
+
+  .u-section-1 .u-text-1 {
+    font-size: 1.5rem;
+    margin-top: 131px;
+    margin-left: -76px;
+    margin-right: -76px;
+  }
+
+  .u-section-1 .u-text-2 {
+    font-size: 0.875rem;
+    margin-top: 48px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-top: 32px;
   }
 }
 
@@ -92,17 +134,18 @@
 .u-section-2 .u-text-1 {
   font-size: 2.25rem;
   font-weight: 700;
-  margin: 112px auto 0;
+  margin: 111px auto 0;
 }
 
 .u-section-2 .u-text-2 {
-  font-weight: 500;
   width: 756px;
-  margin: 43px auto 0;
+  font-weight: 400;
+  font-size: 1.125rem;
+  margin: 44px auto 0;
 }
 
 .u-section-2 .u-btn-1 {
-  font-size: 1rem;
+  font-size: 1.125rem;
   border-style: solid;
   font-weight: 600;
   letter-spacing: 1px;
@@ -112,12 +155,6 @@
   padding: 7px 22px;
 }
 
-@media (max-width: 1199px) {
-  .u-section-2 .u-text-2 {
-    font-size: 1.125rem;
-  }
-}
-
 @media (max-width: 991px) {
   .u-section-2 .u-text-2 {
     width: 720px;
@@ -125,10 +162,6 @@
 }
 
 @media (max-width: 767px) {
-  .u-section-2 .u-text-1 {
-    font-size: 1rem;
-  }
-
   .u-section-2 .u-text-2 {
     font-size: 1rem;
     width: 540px;
@@ -190,12 +223,12 @@
 }
 
 .u-section-3 .u-text-2 {
-  font-size: 1.125rem;
+  font-size: 1.25rem;
   margin: 30px auto 0;
 }
 
 .u-section-3 .u-text-3 {
-  font-size: 0.875rem;
+  font-size: 1rem;
   margin: 20px 0 0;
 }
 
@@ -214,12 +247,12 @@
 }
 
 .u-section-3 .u-text-4 {
-  font-size: 1.125rem;
+  font-size: 1.25rem;
   margin: 30px auto 0;
 }
 
 .u-section-3 .u-text-5 {
-  font-size: 0.875rem;
+  font-size: 1rem;
   margin: 20px 0 0;
 }
 
@@ -308,12 +341,12 @@
 }
 
 .u-section-4 .u-text-1 {
-  font-size: 1.125rem;
+  font-size: 1.25rem;
   margin: 30px auto 0;
 }
 
 .u-section-4 .u-text-2 {
-  font-size: 0.875rem;
+  font-size: 1rem;
   margin: 20px 0 0;
 }
 
@@ -334,12 +367,12 @@
 }
 
 .u-section-4 .u-text-3 {
-  font-size: 1.125rem;
+  font-size: 1.25rem;
   margin: 30px auto 0;
 }
 
 .u-section-4 .u-text-4 {
-  font-size: 0.875rem;
+  font-size: 1rem;
   margin: 20px 0 0;
 }
 
